@@ -1,3 +1,9 @@
+2008-02-06  Neal H. Walfield  <neal@gnu.org>
+
+	* object.c (folio_free): Synchronize the in-memory descriptor with
+	the on-disk data.
+	(folio_object_alloc): Likewise.
+
 2008-02-05  Neal H. Walfield  <neal@gnu.org>
 
 	* thread.h (struct wait_queue_node): Remove structure.
